cocoa: draw default favicon in theme color

This makes the default favicon more visible on dark themes.

Bug: 709307
Change-Id: I86ff398f1ec046bd2990dfb5f729b96884fdc5a7
Reviewed-on: https://chromium-review.googlesource.com/608512
Commit-Queue: Elly Fong-Jones <ellyjones@chromium.org>
Reviewed-by: Robert Sesek <rsesek@chromium.org>
Cr-Commit-Position: refs/heads/master@{#493076}
Former-commit-id: e78297f19a802b8e4f26b170f2e4c026a226fba7