chrome/browser/ui/cocoa/tab_contents/favicon_util_mac.mm
@@ -11,20 +11,36 @@
 #include "chrome/browser/favicon/favicon_utils.h"
 #include "skia/ext/skia_utils_mac.h"
 #include "ui/base/material_design/material_design_controller.h"
+#include "ui/base/resource/resource_bundle.h"
 #include "ui/gfx/image/image.h"
 #include "ui/gfx/image/image_skia_util_mac.h"
 #include "ui/gfx/paint_vector_icon.h"
+#include "ui/resources/grit/ui_resources.h"
 
 namespace {
 
 const CGFloat kVectorIconSize = 16;
+
+bool HasDefaultFavicon(content::WebContents* contents) {
+  gfx::Image favicon = favicon::TabFaviconFromWebContents(contents);
+  if (favicon.IsEmpty())
+    return false;
+  ui::ResourceBundle& rb = ui::ResourceBundle::GetSharedInstance();
+  const gfx::ImageSkia* default_favicon =
+      rb.GetImageSkiaNamed(IDR_DEFAULT_FAVICON);
+
+  return favicon.ToImageSkia()->BackedBySameObjectAs(*default_favicon);
+}
 
 }  // namespace
 
 namespace mac {
 
 NSImage* FaviconForWebContents(content::WebContents* contents, SkColor color) {
-  if (contents) {
+  // If |contents| is using the default favicon, it needs to be drawn in
+  // |color|, which means this function can't necessarily reuse the existing
+  // favicon.
+  if (contents && !HasDefaultFavicon(contents)) {
     NSImage* image = favicon::TabFaviconFromWebContents(contents).AsNSImage();
 
     // The |image| could be nil if the bitmap is null. In that case, fallback
